--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1479,6 +1479,9 @@ select {
 .p-5 {
   padding: 1.25rem;
 }
+.p-3 {
+  padding: 0.75rem;
+}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1587,9 +1590,6 @@ select {
 .pr-1 {
   padding-right: 0.25rem;
 }
-.pl-2 {
-  padding-left: 0.5rem;
-}
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1619,6 +1619,15 @@ select {
 }
 .pt-3 {
   padding-top: 0.75rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
+}
+.pr-5 {
+  padding-right: 1.25rem;
+}
+.pr-10 {
+  padding-right: 2.5rem;
 }
 .text-left {
   text-align: left;
