--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1038,6 +1038,9 @@ select {
 .flex-wrap {
   flex-wrap: wrap;
 }
+.content-between {
+  align-content: space-between;
+}
 .items-start {
   align-items: flex-start;
 }
