--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1011,6 +1011,9 @@ select {
 .flex-wrap {
   flex-wrap: wrap;
 }
+.content-end {
+  align-content: flex-end;
+}
 .content-between {
   align-content: space-between;
 }
@@ -1077,9 +1080,6 @@ select {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-.break-all {
-  word-break: break-all;
 }
 .rounded-md {
   border-radius: 0.375rem;
