--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1011,9 +1011,6 @@ select {
 .flex-wrap {
   flex-wrap: wrap;
 }
-.content-end {
-  align-content: flex-end;
-}
 .content-between {
   align-content: space-between;
 }
@@ -1080,6 +1077,9 @@ select {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+.break-all {
+  word-break: break-all;
 }
 .rounded-md {
   border-radius: 0.375rem;
@@ -2435,14 +2435,6 @@ select {
 
   .md\:w-auto {
     width: auto;
-  }
-
-  .md\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .md\:grid-cols-3 {
