--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1390,6 +1390,10 @@ select {
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
 .pt-8 {
   padding-top: 2rem;
 }
@@ -1458,6 +1462,9 @@ select {
 }
 .pt-3 {
   padding-top: 0.75rem;
+}
+.pl-7 {
+  padding-left: 1.75rem;
 }
 .text-left {
   text-align: left;
@@ -1671,6 +1678,9 @@ select {
 }
 .opacity-60 {
   opacity: 0.6;
+}
+.opacity-80 {
+  opacity: 0.8;
 }
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
