--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1105,9 +1105,6 @@ select {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.break-all {
-  word-break: break-all;
-}
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -1275,9 +1272,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(224 242 254 / var(--tw-bg-opacity));
 }
-.bg-gray-100\/5 {
-  background-color: rgb(243 244 246 / 0.05);
-}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -1308,6 +1302,9 @@ select {
 }
 .p-5 {
   padding: 1.25rem;
+}
+.p-3 {
+  padding: 0.75rem;
 }
 .px-4 {
   padding-left: 1rem;
