--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1035,6 +1035,9 @@ select {
 .flex-wrap {
   flex-wrap: wrap;
 }
+.content-center {
+  align-content: center;
+}
 .content-end {
   align-content: flex-end;
 }
