--- a/public/css/app.css
+++ b/public/css/app.css
@@ -931,6 +931,9 @@ select {
 .w-2 {
   width: 0.5rem;
 }
+.w-3\/6 {
+  width: 50%;
+}
 .w-40 {
   width: 10rem;
 }
@@ -1122,6 +1125,9 @@ select {
 }
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-none {
+  border-radius: 0px;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
